There is no need to generate ports ourselves, we only need to generate a registry port as RMI can automatically get an available port on its own.
Remote Agents